# everything2prompt

./: .gitignore  README.md  README_MCP.md  cache.py  cal.py  e2p.sh  health.py  instapaper.csv  instapaper.py  models.py  obsidian.py  pyproject.toml  query.py  requirements.txt  server.py  tag_descriptions.py  tag_descriptions_template.json  todoist.py  update_cache.sh
config/: env_template.txt
scratch/: calendar_scratch.py  count_md_words.py  test_health_integration.py  test_query_help.py  todoist_auth.py  todoist_scratch.py
scripts/: e2p.sh  update_cache.sh
src/: cache.py  models.py  query.py  server.py  tag_descriptions.py
src/sources/: calendar.py  health.py  instapaper.py  obsidian.py  todoist.py
