[tool.poetry]
name = "everything2prompt"
version = "0.1.0"
description = "Turn any data source into a prompt."
authors = ["Bilal Chughtai <brchughtaii@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyyaml = "^6.0.2"
pydantic = "^2.11.7"
jinja2 = "^3.1.6"
todoist-api-python = "^3.1.0"
python-dotenv = "^1.0.0"
icalendar = "^6.3.1"
requests = "^2.31.0"
mcp = {extras = ["cli"], version = "^1.2.0"}
requests-oauthlib = "^2.0.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.30.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
